<resources>
    <string name="app_name">Data storage</string>
    <!-- Menu items -->
    <string name="shared_pref">Shared preference</string>
    <string name="file_storage">File storage</string>
    <string name="database_storage">Database storage</string>
    <string name="json_storage">JSON storage</string>
    <string name="composit_storage">Pictures</string>

    <string name="data_storage">Data storage variants</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="key">Key</string>
    <string name="value">Value</string>

    <string name="button_save">Add key</string>
    <string name="button_find">Check key</string>
    <string name="button_clear">Delete key</string>
    <string name="button_camera">Camera</string>
    <string name="button_save_image">Save</string>
    <string name="button_load_image">Load</string>

    <string name="person_name">Name</string>
    <string name="friend_name">Friend`s name</string>
    <string name="person_phone">Phone</string>
    <string name="person_email">E-mail</string>
    <string name="person_birthday">Birthday</string>
    <string name="friend_list">Friends list</string>
    <string name="file_name">File</string>

    <string name="menuitem_delete">DELETE</string>
    <string name="menuitem_save">SAVE</string>
    <string name="menuitem_addfriend">Add friend</string>
    <string name="menuitem_delfriend">Delete friend</string>

    <!-- dialog buttons-->
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
</resources>
