<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/one_group_id">
        <item android:id="@+id/menuitem_shared_pref_id"
            android:title="@string/shared_pref"
            android:icon="@drawable/ic_shared_pref"
            app:showAsAction="always"/>
        <item android:id="@+id/menuitem_file_storage_id"
            android:title="@string/file_storage"
            android:icon="@drawable/ic_internal_storage"
            app:showAsAction="always"/>
        <item android:id="@+id/menuitem_database_storage_id"
            android:title="@string/database_storage"
            android:icon="@drawable/ic_database_storage"
            app:showAsAction="always"/>
        <item android:id="@+id/menuitem_external_storage_id"
            android:title="@string/composit_storage"
            android:icon="@drawable/ic_external_storage"
            app:showAsAction="always"/>
    </group>



</menu>