<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_id"
        android:layout_width="0dp"
        android:layout_height="256dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/person_big"
        />
    <Button
        android:id="@+id/btn_camera_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/image_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_load_id"
        android:text="@string/button_camera"
        android:background="@drawable/button_shape"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/btn_load_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/image_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_camera_id"
        android:text="@string/button_load_image"
        android:background="@drawable/button_shape"
        android:textColor="@android:color/white"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/input_file_id"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/view_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_save_id"
        app:layout_constraintBottom_toBottomOf="@+id/btn_save_id"
        app:layout_constraintHorizontal_weight="7"
        >
        <EditText
            android:id="@+id/file_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_edit_color"
            android:inputType="text"
            android:hint="@string/file_name"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_save_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/btn_load_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/input_file_id"
        app:layout_constraintHorizontal_weight="3"
        android:text="@string/button_save_image"
        android:background="@drawable/button_shape"
        android:textColor="@android:color/white"
        />


</android.support.constraint.ConstraintLayout>